--- a/stsMvcProj/src/main/webapp/views/home.html
+++ b/stsMvcProj/src/main/webapp/views/home.html
@@ -62,5 +62,21 @@
 <a href="model/mmm2?no=2">mmm2</a>
 <a href="model/season">season</a>
 <a href="ban/classclass">classclass</a>
+<h2>path</h2>
+<a href="path/aaa">aaa</a>
+<a href="path/tv/aaa">tv/aaa</a>
+<a href="path/phone/bbb">phone/bbb</a>
+<a href="path/notice/list/2">notice/list/2</a>
+<a href="path/notice/detail/4">notice/detail/4</a>
+<a href="path/notice/modify/5">notice/modify/5</a>
+<a href="path/season/spring">season</a>
+<h2>provider</h2>
+<a href="provider/list">list</a>
+<a href="provider/bat1">bat1</a>
+<a href="provider/bat2">bat2</a>
+<h2>form/form</h2>
+<a href="form/form">form</a>
+<a href="form/link">link</a>
+<a href="form/validation">validation</a>
 </body>
 </html>
