--- a/stsMvcProj/src/main/webapp/views/board/alert.html
+++ b/stsMvcProj/src/main/webapp/views/board/alert.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <script>
-	alert("[[${pageData.msg}]]")
-	location.href="[[${pageData.goUrl}]]"
+	alert("[[${boardDTO.msg}]]")
+	location.href="[[${boardDTO.goUrl}]]"
 </script>
 </body>
 </html>
