--- a/stsMvcProj/src/main/webapp/views/board/deleteForm.html
+++ b/stsMvcProj/src/main/webapp/views/board/deleteForm.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 board/deleteForm
-<form method="post">
-	<input type="hidden" th:field="${id}" name="id"/>
+<form method="post" >
+	<input type="hidden" th:value="${id}" name="id"/>
+	<input type="hidden" th:value="${page}" name="page"/>
 	<table border="">
 		<tr>
 			<td>암호</td>
@@ -16,7 +17,7 @@ board/deleteForm
 		<tr>
 			<td colspan="2" align="center">
 				<input type="submit" value="삭제" />
-				<a th:href="|/board/detail/${id}|" th:text="뒤로" />
+				<a th:href="|/board/detail/${page}/${id}|" th:text="뒤로"/>
 			</td>
 		</tr>
 	</table>
