--- a/stsMvcProj/src/main/webapp/views/board/insertForm.html
+++ b/stsMvcProj/src/main/webapp/views/board/insertForm.html
@@ -18,7 +18,7 @@
 		</tr>
 		<tr>
 			<td>암호</td>
-			<td><input type="text" th:field="*{pw}"/></td>
+			<td><input type="text" th:field="*{pw}" /></td>
 		</tr>
 		<tr>
 			<td>파일</td>
@@ -26,14 +26,16 @@
 		</tr>
 		<tr>
 			<td>내용</td>
-			<td><textarea th:field="*{content}"/></td>
+			<td><textarea th:field="*{content}" /></td>
 		</tr>
 		<tr>
 			<td colspan="2" align="center">
-				<input type="submit" value="작성"/>
-			</td> 
+				<input type="submit" value="작성" />
+				<a th:href="|/board/list/${page}|">목록으로</a>
+			</td>
 		</tr>
 	</table>
 </form>
+
 </body>
 </html>
