--- a/stsMvcProj/src/main/webapp/views/board/modifyForm.html
+++ b/stsMvcProj/src/main/webapp/views/board/modifyForm.html
@@ -8,6 +8,7 @@
 <h1>board/modifyForm</h1>
 <form method="post" enctype="multipart/form-data" th:object="${dto}">
 	<input type="hidden" th:field="*{id}" />
+	<input type="hidden" th:field="*{page}" />
 	<table border="">
 		<tr>
 			<td>제목</td>
@@ -19,7 +20,7 @@
 		</tr>
 		<tr>
 			<td>암호</td>
-			<td><input type="text" name="pw"/></td>
+			<td><input type="text" name="pw" /></td>
 		</tr>
 		<tr>
 			<td>파일</td>
@@ -27,15 +28,16 @@
 		</tr>
 		<tr>
 			<td>내용</td>
-			<td><textarea th:field="*{content}"/></td>
+			<td><textarea th:field="*{content}" /></td>
 		</tr>
 		<tr>
 			<td colspan="2" align="center">
-				<input type="submit" value="수정"/>
-				<a th:href="|/board/detail/${dto.id}|" th:text="뒤로" />
-			</td> 
+				<input type="submit" value="수정" />
+				<a th:href="|/board/detail/${dto.page}/${dto.id}|" th:text="뒤로"/>
+			</td>
 		</tr>
 	</table>
 </form>
+
 </body>
 </html>
